// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination/> renders correctly 1`] = `
<ul
  className="Pagination-pagination-1"
>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        1
      </span>
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        ...
      </span>
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 Pagination-primary-4 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        5
      </span>
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        6
      </span>
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        7
      </span>
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        ...
      </span>
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        11
      </span>
    </button>
  </li>
</ul>
`;

exports[`<Pagination/> renders correctly when onclick props is passed 1`] = `
<ul
  className="Pagination-pagination-1"
>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        1
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        ...
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 Pagination-primary-4 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        5
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[MockFunction]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        6
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        7
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        ...
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root Pagination-paginationLink-3 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        11
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </li>
</ul>
`;
